--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Escuela de Ciencias Físicas y Matemática"
 description: "Repositorio de Material Educativo"
 
-baseurl: "https://ECFM-PUCE.github.io"
+baseurl: ""
 url: "https://ECFM-PUCE.github.io"
